CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(luaScript) 
SET(CMAKE_CXX_COMPILER "g++")

SET( INCLUDE_PATH
	${PROJECT_SOURCE_DIR}/lua/lua-5.1.5/src
)

INCLUDE_DIRECTORIES( ${INCLUDE_PATH} )
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../lib/linux)
AUX_SOURCE_DIRECTORY(./ LIB_SRC)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${LIB_SRC})

ADD_DEFINITIONS(-D__LINUX__ -Dlinux -Wno-deprecated  -std=c++11)

INSTALL( TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/../lib/linux
)
